--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,30 +29,36 @@ const { banner, features }: Homepage = homepage.data;
   <section class="section pt-14">
     <div class="container">
       <div class="row justify-center">
-        <div class="mb-16 text-center lg:col-7">
-          <h1 set:html={markdownify(banner.title)} class="mb-4" />
-          <p set:html={markdownify(banner.content)} class="mb-8" />
-          {
-            banner.button.enable && (
-              <a class="btn btn-primary" href={banner.button.link}>
-                {banner.button.label}
-              </a>
-            )
-          }
-        </div>
-        {
-          banner.image && (
-            <div class="col-12">
-              <Image
+        <div class="mb-16 text-center">
+          <div style="position: relative;">
+
+            {
+              banner.image && (
+                
+                <Image
                 src={banner.image}
                 height={380}
                 width={1200}
-                alt="banner image"
+                alt="cronomonarca"
                 format="webp"
-              />
+                />
+                
+              )
+            }
+            <div style="position: absolute; inset: 15px;">
+              <h1 set:html={markdownify(banner.title)} class="mb-4 titprincipal" />
+              <h5 set:html={markdownify(banner.content)} class="mb-8 subtitprincipal" />
+              {
+                banner.button.enable && (
+                  <a class="btn btn-primary" href={banner.button.link}>
+                    {banner.button.label}
+                    </a>
+                    )
+                }
             </div>
-          )
-        }
+
+          </div>
+        </div>
       </div>
     </div>
   </section>
