--- a/src/pages/background.astro
+++ b/src/pages/background.astro
@@ -4,9 +4,9 @@ import { markdownify } from "@/lib/utils/textConverter";
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 
-const about = await getEntry("about", "-index");
-const { Content } = await about.render();
-const { title, description, meta_title, image } = about.data;
+const background = await getEntry("background", "-index");
+const { Content } = await background.render();
+const { title, description, meta_title, image } = background.data;
 ---
 
 <Base
