--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ const { title, description, meta_title, image } = contact.data;
     <div class="container">
       <div class="row">
         <div class="mx-auto md:col-10 lg:col-6">
-          <form action={contact_form_action} method="POST" name="cronomontestform" data-netlify="true">
+          <form method="POST" name="cronomontestform" data-netlify="true">
             <div class="mb-6">
               <label for="name" class="form-label">
                 Full Name <span class="text-red-500">*</span>
